# scalable_ml

./: .pre-commit-config.yaml  Procfile  README.md  environment.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py  model_card.md  model_card_template.md  slice_metrics.json  slice_output.txt  train_model.py
app/ml/: data.py  model.py
app/model/: encoder.pkl  label_binarizer.pkl
sciripts/: test_api_post.py
starter/: sanitycheck.py
starter/starter/: train_model.py
starter/starter/ml/: model.py
tests/: test_api.py  test_model.py
