[tool.poetry]
name = "app"
version = "0.1.0"
description = "Simple ML Model with FastAPI support"
authors = ["Hamed Sefati"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "app", from = "."},
]

[tool.poetry.dependencies]
python = ">=3.10"
scikit-learn = "1.5.1"
pandas = "2.0.3"
numpy = "1.26.4"
uvicorn = "0.32.1"
fastapi = "^0.115.5"
httpx = "^0.28.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
black = "^23.0"
flake8 = "^7.0.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
